<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.univ.mixalis.tripapp.MainActivity2">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"
        android:paddingTop="0px"
        android:text="Items list" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:id="@+id/LinearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bag"
                    android:textSize="30sp"
                    tools:text="Bag" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/blouse"
                    android:textSize="30sp"
                    tools:text="Blouse" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/burgers"
                    android:textSize="30sp"
                    tools:text="Burgers" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hair_spray"
                    android:textSize="30sp"
                    tools:text="Hair Spray" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hammer"
                    android:textSize="30sp"
                    tools:text="Hammer" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lighter"
                    android:textSize="30sp"
                    tools:text="Lighter" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nails"
                    android:textSize="30sp"
                    tools:text="Nails" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pants"
                    android:textSize="30sp"
                    tools:text="Pants" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t_shirt"
                    android:textSize="30sp"
                    tools:text="T-shirt" />

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tent"
                    android:textSize="30sp"
                    tools:text="Tent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutTextf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/idEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Insert the duration of the trip (in days)"/>

                <EditText
                    android:id="@+id/idEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Insert budget" />

                <EditText
                    android:id="@+id/idEditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="In how many days is the trip?"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/TesterButton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="44dp"
                    android:onClick="goToSavedTrip"
                    android:text="@string/go_to_saved_trip"
                    tools:text="Go to trip" />

                <Button

                    android:id="@+id/idBackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/Back"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/idSaveBtn"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="59dp"
                    android:onClick="onClickSave"
                    android:text="@string/Save"
                    tools:text="Save" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
